[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/hackcraft.de_cc0/crosshair3.png" type="Texture2D" id=1]
[ext_resource path="res://camera/CameraRig.gd" type="Script" id=2]
[ext_resource path="res://assets/hackcraft.de_cc0/crosshair0.png" type="Texture2D" id=3]

[sub_resource type="SphereMesh" id=1]

[node name="CameraRig" type="Node3D"]
script = ExtResource( 2 )

[node name="InvisibleControlForGettingMousePos" type="Control" parent="."]
offset_right = 40.0
offset_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PickerLocation" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="PickerLocation"]
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="PointerMarker" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -96.0
offset_right = 96.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="PointerMarker"]
offset_right = 64.0
offset_bottom = 64.0
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AimMarker" type="Control" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="AimMarker"]
offset_left = -94.9597
offset_top = -93.852
offset_right = -30.9597
offset_bottom = -29.852
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CameraOffset" type="Node3D" parent="."]

[node name="LookSlightlyAbove" type="Node3D" parent="CameraOffset"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.83876, 0 )

[node name="PitchHelper" type="Node3D" parent="CameraOffset"]

[node name="CameraLocation" type="Node3D" parent="CameraOffset/PitchHelper"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.74947, 24.0506 )

[node name="Camera3D" type="Camera3D" parent="CameraOffset/PitchHelper/CameraLocation"]
current = true
far = 800.0

[node name="AudioListener3D" type="AudioListener3D" parent="CameraOffset"]
current = true
